--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "2.5.16",
     "vue-clickaway": "2.2.2",
     "vue-material": "1.0.0-beta-8",
-    "vue-router": "3.0.1"
+    "vue-router": "3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.0.0-beta.15",
